--- a/build.gradle
+++ b/build.gradle
@@ -64,10 +64,12 @@ dependencies {
     compile	'org.apache.commons:commons-lang3:3.4'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile group: 'org.testng', name: 'testng', version: '6.9.8'
 }
 
 def jettyHttpPort = 8090
 def jettyContextPath = "/"
+def testngConfigPath = 'src/test/resources/testng.xml'
 
 jettyRun{
     contextPath = jettyContextPath
@@ -79,3 +81,9 @@ jettyRunWar{
     httpPort = jettyHttpPort
 }
 
+test {
+    useTestNG{
+        suites testngConfigPath
+        useDefaultListeners = true
+    }
+}
