--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,12 @@ repositories {
     }*/
 }
 
+def jettyVersion = "9.3.9.M1"
+
+configurations {
+    jettyServer
+}
+
 dependencies {
     //compile 'ch.qos.logback:logback-classic:1.1.3'
     //compile 'joda-time:joda-time:2.8.2'
@@ -63,6 +69,9 @@ dependencies {
 
     compile	'org.apache.commons:commons-lang3:3.4'
 
+    //compile 'org.eclipse.jetty:jetty-runner:9.3.9.M1'
+    jettyServer 'org.eclipse.jetty:jetty-runner:9.3.9.M1'
+
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'org.testng', name: 'testng', version: '6.9.8'
 }
@@ -70,6 +79,19 @@ dependencies {
 def jettyHttpPort = 8090
 def jettyContextPath = "/"
 def testngConfigPath = 'src/test/resources/testng.xml'
+
+task jettyServerRun(type: JavaExec,dependsOn: build) {
+    main = "org.eclipse.jetty.runner.Runner"
+    args = ["--port","8090",war.archivePath]
+    classpath configurations.jettyServer
+}
+
+/*
+task jettyServerStop << {
+    ant.taskdef(name: 'jettyStop', classname: 'org.eclipse.jetty.ant.JettyStopTask', classpath: configurations.jetty.asPath)
+    ant.jettyStop(stopPort: 8090, stopKey: "STOP")
+}
+*/
 
 jettyRun{
     contextPath = jettyContextPath
@@ -86,4 +108,13 @@ test {
         suites testngConfigPath
         useDefaultListeners = true
     }
+}
+
+task copyJettyJars(type: Copy) {
+    from configurations.jettyServer
+    into 'build/dist' // 目标位置
+}
+
+task stage{
+    dependsOn "build","copyJettyJars"
 }
