--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ image: java:openjdk-8
 
 stages:
   - test
+  - deploy
 
 before_script:
   - apt-get update -y
@@ -13,3 +14,13 @@ test_async:
    - gradle test --info
   tags:
     - docker
+
+staging:
+  type: deploy
+  script:
+    - apt-get update -qy
+    - apt-get install -y ruby-dev
+    - gem install dpl
+    - dpl --provider=heroku --app=murmuring-dawn-66891 --api-key=$HEROKU_API_KEY
+  only:
+    - deploy
