调整配置文件

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,3 +24,5 @@ staging:
     - dpl --provider=heroku --app=murmuring-dawn-66891 --api-key=$HEROKU_API_KEY
   only:
     - deploy
+  tags:
+    - docker
